Jython NEWS

Jython 2.5.2rc1
  Bugs Fixed
    - [ 1647 ] zxJDBC does not handle NVARCHAR

Jython 2.5.2b2
  Bugs Fixed
    - [ 1327 ] Classloaders cannot GC, which exhausts permgen (partial  bug fix)
    - [ 1604 ] PyBuiltinCallable.Info should be serializable
    - [ 1397 ] Bugs in PyList and PyJavaType.ListIndexDelegate slice setting
    - [ 1503 ] Java constructors should take keyword arguments
    - [ 1648,1495,1516 ] Incomplete implementation of pep328 for relative imports
    - [ 1611 ] Jython bytecode violated JLS, causing NPE on Sun's JVM when using -Xcomp option
    - [ 1643 ] Tools subdirectory still exists in trunk
    - [ 1455 ] Classes loaded dynamically from sys.path do not have their package defined
    - [ 1555 ] Jython does not publish MIME types via JSR 223 (ScriptEngine.getFactory().getMimeTypes() is empty).
    - [ 1632 ] cPickle.Unpickler does not allow assignment of find_global
    - [ 1395 ] PyList.indexOf() and PyTuple.indexOf() do not function properly
    - [ 1373 ] Jython ClassLoader getResource does not work
    - [ 1506 ] Jython applies PEP263 pattern for determining source-code encoding on noncomments
    - [ 1630 ] threading.Thread lacks __tojava__ method
    - [ 1558 ] PyFunction to single method interface wrapping does not handle java.lang.Object methods
    - [ 1622 ] array type prevents __radd__ fallback

Jython 2.5.2b1
  Bugs Fixed
    - [ 1559 ] time.strptime broken for day of week for Sunday
    - [ 1614 ] minidom chunks the character input on multi-line values
    - [ 1615 ] Can't invoke Java method that takes a variable number of arguments with zero arguments
    - [ 1605 ] float preference over PyComplex as arg to __call__ breaks logic
    - [ 1586 ] weakref reference count leak when kwargs are used
    - [ 1601 ] Can't serialize PyCode object
    - [ 1551 ] Java objects cannot be copied by the copy module
    - [ 1375 ] XML SAX: attrs.get((None, 'attr')) gives NPE